Bug 286661 - Dialog to set target location for Export to Remote Computer is not displayed correctly
Summary: Dialog to set target location for Export to Remote Computer is not displayed ...
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-WebService-FileTransfer (other bugs)
Version First Reported In: 2.3.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-15 09:06 UTC by Daniel
Modified: 2018-02-02 05:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4.0
Sentry Crash Report:


Attachments
Screenshot of the Set target location dialog (20.80 KB, image/jpeg)
2011-11-15 09:06 UTC, Daniel
Details
dialog under linux... (359.53 KB, image/png)
2011-11-15 09:22 UTC, caulier.gilles
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel 2011-11-15 09:06:03 UTC
Created attachment 65695 [details]
Screenshot of the Set target location dialog

Version:           2.3.0 (using KDE 4.7.2) 
OS:                MS Windows

If the Export to Remote Computer plugin is used the first dialog to select the pictures is opened correctly.
The dialog to select the target location is opened but the content is not displayed correctly. On top some very small icons are visible, which are even clickable. But you are not able to select a directory.

Reproducible: Always

Steps to Reproduce:
Select an image
Goto Export -> Export To Remote Computer
Click on Select target location


Actual Results:  
The opened dialog is not displayed correctly

Expected Results:  
The dialog should be displayed correctly
Comment 1 caulier.gilles 2011-11-15 09:22:53 UTC
Created attachment 65696 [details]
dialog under linux...

Same dialog under linux. No problem here...

Gilles Caulier
Comment 2 Ananta Palani 2011-11-15 14:26:40 UTC
Alright, it looks like the problem lies with using KFileDialog::show(). On windows, KFileDialog expects to use native file interface, so KFileDialog::exec() should be used instead in all cases, much like the rest of digiKam does already. To fix this, this plugin will need to be adjusted to use ::exec().
Comment 3 Ananta Palani 2011-11-24 18:04:31 UTC
Git commit bb1bd43fdb66592fe633ccbb7278acd607a19ad0 by Ananta Palani.
Committed on 24/11/2011 at 19:02.
Pushed by palani into branch 'master'.

Fixes problem with KIOImportExport on Windows where it was impossible to browse for a target destination.

BUG: 286661
FIXED-IN: 2.4.0

M  +2    -1    NEWS
M  +14   -17   kioexportimport/KioExportWidget.cpp
M  +0    -1    kioexportimport/KioExportWidget.h

http://commits.kde.org/kipi-plugins/bb1bd43fdb66592fe633ccbb7278acd607a19ad0