Fixes problem with KIOImportExport on Windows where it was impossible to browse for a target destination.

BUG: 286661
FIXED-IN: 2.4.0