kioexportimport/KioExportWidget.h
@@ -87,7 +87,6 @@ public:
 private Q_SLOTS:
 
     void slotShowTargetDialogClicked(bool checked);
-    void slotTargetOkClicked();
     void slotProcessUrl(const QString&);
 
 Q_SIGNALS:
